v2.0.0.45
Listing without author assigned always shows author actions widget - FIXED

v2.0.0.44
Astra theme archive page layout compatibility - ADDED
Astra theme GD search page meta title setting not working - FIXED
Load default template if page is 404 - FIXED
GD Listings widget special offers option is missing - FIXED
Post badge external urls are now nofollow - CHANGED
Slider carousel images now use thumbnail size for consistency - CHANGED
GD listings widget now has option to filter by default_category only - ADDED
GD listings widget now has option to filter post IDs - ADDED
HTML custom field stripping html tags from default value - FIXED
GD Listings widget not working across CPT with sort by to nearest option - FIXED
Review count not reflecting on listing page - FIXED
Added option in GD page settings to view default content - ADDED
Image name with upper case file extensions (JPG) not importing - FIXED
Checkbox and radio admin setting in FireFox are 100% width - FIXED
Some GD pages removed from WP page settings so not to be able to break things - CHANGED
Textarea field output renders detail page tabs - FIXED
CURL call replaced with wp_remote_get() - CHANGED
WP_POST_REVISIONS can cause backend new posts to not save custom fields - FIXED
Changes for custom maps OSM layer api key - CHANGED
SiteOrigin page builder compatibility changes - ADDED
Decimal and Int custom fields can be given a zero (0) value when submitted empty - FIXED
Elementor pro archive templates not fully working with post archive element - FIXED
Term icon cache not cleared when installing dummy data - FIXED
Map module refactored to allow category includes and excludes via category IDs - CHANGED
GD tool "Term counts" not updating term counts - FIXED
REST API listing response does not contains content field - FIXED
GD Archive page links to blank page - FIXED
the7 theme Search page not working due to the_content filter and current_post var - FIXED