@@ -1,5 +1,6 @@
 v2.0.0.45
 Listing without author assigned always shows author actions widget - FIXED
+Video not rendering from video link - FIXED
 
 v2.0.0.44
 Astra theme archive page layout compatibility - ADDED
